<resources>
    <string name="app_name">Project_Mobile</string>
    <string name="login_success">Login Success</string>
    <string name="error_field_required">Thi field cannot be empty</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_invalid_password">Password must be longer than 6 characters, it contains at least 1 uppercase, 1 digit and 1 special character</string>

    <string name="logOut">Log out</string>
    <string name="guest_mode">Guest</string>
    <string name="update">Update</string>

    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <string name="history">History</string>
    <string name="licensePlate">License Plate</string>
    <string name="fullName">Full Name</string>

    <string name="book">Book</string>
    <string name="area">Area</string>
    <string name="row">Row</string>
    <string name="position">Position</string>

    <string name="welcome_back">Welcome back</string>
    <string name="parking_the_car">🚴 Parking the car</string>
    <string name="no_parking">...</string>
    <string name="parking_location">Parking location</string>
    <string name="payment">Payment</string>
    <string name="more">More</string>
    <string name="parking_lot_status">Parking Lot Status</string>

    <string name="your_info">Your infor...</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="date">Date</string>

    <string name="fee">Fee</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not paid</string>

    <string name="language">Language</string>
    <string name="volume">Volume</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="language_choice">English</string>

    <string name="save">Save</string>
    <string name="reload">Reload</string>

    <string name="bookingHistory">Booking History</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="confirmStudentId">Confirm your Student Id</string>
    <string name="studentId">Student ID</string>
    <string name="confirm">Confirm</string>
    <string name="alreadyActivatedYourAccount">ALREADY ACTIVATED YOUR ACCOUNT?</string>
    <string name="signIn">SIGN IN</string>

    <string name="welcomeTo">Welcome To...</string>
    <string name="passsword">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="youHaventActivateYourAccountYet">YOU HAVE NOT ACTIVATE YOUR ACCOUNT YET?</string>
    <string name="signUp">SIGN UP</string>
    <string name="youDoNotBelongToHCMUTE">YOU DO NOT BELONG TO HCMUTE?</string>
    <string name="startAsAGuest">START AS A GUEST</string>

    <string name="enterOTP">Enter OTP</string>
    <string name="weHaveSend6digitOTP">We’ve sent a 6-digit OTP to your email</string>
    <string name="verify">VERIFY</string>

    <string name="selectAll">Select all</string>
    <string name="totalAmount">Total amount</string>

    <string name="resetPassword">Reset password</string>
    <string name="enterNewPassword">Enter a new password</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="repeatNewPassword">Repeat new password</string>

    <string name="activateYourAccount">Activate Your Account</string>

    <string name="updateYourProfile">Update Your Profile</string>

    <string name="chooseImage">Choose image</string>
    <string name="upload">Upload</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>