<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorBackground"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Logo -->
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="20dp"
            android:layout_gravity="start" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activateYourAccount"
            android:textSize="24sp"
            android:textColor="?attr/textColor"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmStudentId"
            android:textSize="14sp"
            android:textColor="?attr/textColor"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp" />

        <!-- Student ID Input -->
        <EditText
            android:id="@+id/edtStudentId"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/studentId"
            android:padding="12dp"
            android:textColor="?attr/editTextColor"
            android:textColorHint="#8a8a8a"
            android:layout_marginBottom="12dp"/>

        <!-- Sign Up Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSign"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/gradient_button"
            app:backgroundTint="@null"
            app:cornerRadius="10dp" />

        <!-- Redirect -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyActivatedYourAccount"
            android:textColor="?attr/textColor"
            android:textSize="12sp"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textColor="#7ED957"
            android:textStyle="bold"
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>
