<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="20dp"
            android:layout_gravity="start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update Your Info"
            android:textSize="24sp"
            android:textColor="?attr/textColor"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/etFullname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/fullName"
            android:padding="12dp"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="12dp"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/etLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/licensePlate"
            android:padding="12dp"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            android:hint="New Password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginTop="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateInfo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="CONFIRM"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:background="@drawable/gradient_button"
            app:backgroundTint="@null"
            app:cornerRadius="10dp" />
    </LinearLayout>
</ScrollView>
