<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="10dp"
        android:elevation="10dp"
        android:gravity="center"
        android:background="?attr/navColor"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/homeLayout"
            android:background="@drawable/selected_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/homeImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_home" />
            <TextView
                android:id="@+id/homeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/notificationLayout"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/notificationImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_notification" />
            <TextView
                android:id="@+id/notificationTxt"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileLayout"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_profile" />
            <TextView
                android:id="@+id/profileTxt"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsLayout"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/settingsImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_settings" />
            <TextView
                android:id="@+id/settingsTxt"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>

