<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    tools:context=".fragment.SettingsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:src="@android:drawable/sym_def_app_icon"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ten Nguoi Dung"
        android:layout_margin="32dp"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logOut"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/avatar">


        <!-- About Me Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="?attr/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Info Items -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:src="@drawable/ic_language"
                        android:background="@drawable/bg_icon"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language_choice"
                            android:textColor="?attr/textColor"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textColor="#B3B3B3"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- Icon bên phải -->
                    <Spinner
                        android:id="@+id/language_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingEnd="8dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <View
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/border_bottom_selector"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notificationAndMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:src="@drawable/ic_volume_up"
                        android:background="@drawable/bg_icon"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/volume"
                            android:textColor="?attr/textColor"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/volume"
                            android:textColor="#B3B3B3"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- Icon bên phải -->
                    <Switch
                        android:id="@+id/volumeSw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/white"
                        android:trackTint="@drawable/switch_track"
                        android:trackTintMode="screen"
                        android:switchMinWidth="70dp"
                        android:layout_gravity="center"
                        android:checked="true"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>

                <View
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/border_bottom_selector"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <!-- Avatar -->
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:src="@drawable/ic_dark_mode"
                        android:background="@drawable/bg_icon"/>

                    <!-- Thông tin Username -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dark_mode"
                            android:textColor="?attr/textColor"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/theme"
                            android:textColor="#B3B3B3"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- Icon bên phải -->
                    <Switch
                        android:id="@+id/themSw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/white"
                        android:trackTint="@drawable/switch_track"
                        android:trackTintMode="screen"
                        android:switchMinWidth="70dp"
                        android:layout_gravity="center"
                        android:checked="true"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>

                <View
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/border_bottom_selector"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>